# FreeCarnival

./: .gitignore  CODENAME  Cargo.toml  README.md  cmd_info.go  cmd_install.go  cmd_launch.go  cmd_library.go  cmd_list_updates.go  cmd_login.go  cmd_update.go  cmd_updates.go  cmd_verify.go  go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
auth/: auth.go  auth_test.go  config.go  config_test.go  installed.go  installed_test.go  product.go  session.go  session_test.go  userinfo.go  userinfo_test.go
download/: chunk.go  chunk_test.go  constants.go  downloader.go  downloader_test.go  launch.go  launch_test.go  mac.go  mac_test.go  manifest.go  manifest_test.go  memory.go  memory_test.go  models.go  models_test.go  progress.go  progress_test.go  resume.go  resume_test.go  verify.go  verify_test.go  writer.go  writer_test.go
launch/: launch.go  launch_test.go  mac.go  mac_test.go  process_unix.go  process_windows.go
logger/: logger.go  logger_test.go
manifest/: manifest.go  manifest_test.go
progress/: progress.go  progress_test.go
src/: api.rs  cli.rs  config.rs  constants.rs  helpers.rs  main.rs  prelude.rs  utils.rs
src/api/: auth.rs  product.rs
src/shared/: models.rs
update/: delta.go  delta_test.go  updater.go  updater_test.go
verify/: verify.go  verify_test.go
