[package]
name = "open-gala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
bytes = "1.4.0"
clap = { version = "4.3.21", features = ["derive"] }
confy = { version = "0.5.1", features = [
	"yaml_conf",
], default-features = false }
cookie = "0.10"
crossbeam-channel = "0.5.8"
csv = "1.2.2"
directories = "5.0.1"
futures = "0.3.28"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
os_path = "0.6.3"
queues = "1.1.0"
reqwest = { version = "0.11.18", features = ["json", "cookies", "rustls-tls"] }
rpassword = "7.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.7"
time = "0.1"
tokio = { version = "1.31.0", features = ["full"] }
