[package]
name = "freecarnival"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
async-recursion = "1.0.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
bytes = "1.4.0"
chrono = { version = "0.4.29", features = ["serde"] }
clap = { version = "4.3.21", features = ["derive"] }
confy = { version = "0.5.1", features = [
	"yaml_conf",
], default-features = false }
csv = "1.2.2"
directories = "5.0.1"
futures = "0.3.28"
human_bytes = { version = "0.4.2", default-features = false }
indicatif = "0.17.6"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
os_path = "0.6.3"
queues = "1.1.0"
regex = { version = "1.9.5", default-features = false }
reqwest = { version = "0.11.18", features = ["json", "cookies", "rustls-tls"] }
reqwest_cookie_store = "0.6.0"
rpassword = "7.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.7"
tokio = { version = "1.31.0", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.5.0"

[patch.crates-io]
cookie = { git = "https://github.com/Gustash/cookie-rs.git" }
