[package]
name = "freecarnival"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
async-recursion = "1.1.1"
base16ct = { version = "0.2.0", features = ["alloc"] }
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
confy = { version = "0.6.1", features = [
	"yaml_conf",
], default-features = false }
csv = "1.3.0"
directories = "5.0.1"
futures = "0.3.30"
human_bytes = { version = "0.4.3", default-features = false }
indicatif = "0.17.8"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
os_path = "0.6.4"
queues = "1.1.0"
regex = { version = "1.10.5", default-features = false }
reqwest = { version = "0.12.4", features = ["json", "cookies", "rustls-tls"] }
reqwest_cookie_store = "0.8.0"
rpassword = "7.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
shlex = "1.3.0"
tokio = { version = "1.38.0", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.6.1"
